# lincride-test

./: .dockerignore  .env.example  .env.sample  .gitignore  Dockerfile  README.md  docker-compose-dev.yaml  docker-compose-prod.yaml  entrypoint.sh  manage.py  package-lock.json  pyproject.toml  requirements.txt
app/authentication/: serializers.py  urls.py  views.py
app/common/: __init__.py  api_docs.py  exceptions.py  response.py
app/health/: urls.py  views.py
app/mail/: service.py
app/mail/templates/: hello_world.html
app/price/: apps.py  enums.py  serializers.py  services.py  tests.py  urls.py  views.py
app/price/migrations/: 0001_initial.py  0002_delete_price.py
app/user/: models.py  serializers.py
app/user/migrations/: 0001_initial.py  0002_user_is_verified.py  0003_alter_user_is_verified.py
config/: asgi.py  urls.py  wsgi.py
config/django/: base.py  development.py  production.py
config/settings/: celery.py
